--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#jpa 로그 보기
+spring.jpa.show-sql=true
+#jpa 로그 보기 좋게 보기
+spring.jpa.properties.hibernate.format_sql=true
+#jpa ? 부분 보이기
+logging.level.org.hibernate.type.descriptor.sql=TRACE
