groupList api 개발

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#jpa 로그 보기
+#jpa \uB85C\uADF8 \uBCF4\uAE30
 spring.jpa.show-sql=true
-#jpa 로그 보기 좋게 보기
+#jpa \uB85C\uADF8 \uBCF4\uAE30 \uC88B\uAC8C \uBCF4\uAE30
 spring.jpa.properties.hibernate.format_sql=true
-#jpa ? 부분 보이기
+#jpa ? \uBD80\uBD84 \uBCF4\uC774\uAE30
 logging.level.org.hibernate.type.descriptor.sql=TRACE
